feat: cache listing media in MinIO
